--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 huggingface-hub
 langchain
 ctransformers
-llama-cpp-python
 chromadb
 bs4
 gpt4all
+black
+InstructorEmbedding
+torch
+sentence-transformers
+unstructured[md]
